nginx/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
